--- a/src/components/preview.css
+++ b/src/components/preview.css
@@ -1,9 +1,12 @@
 .preview-wrapper {
   position: relative;
   height: 100%;
+  flex-grow: 1;
+  overflow: hidden;
 }
 
 .preview-wrapper iframe {
+  width: 100%;
   height: 100%;
   background-color: white;
 }
